# what-songs-do-people-like

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: Dockerfile  airflow.cfg  pyproject.toml
backend/app/: dependencies.py  main.py  models.py  repositories.py  scheduler.py  schemas.py
backend/app/credentials/: auth.py
backend/app/database/: database.py  models.py  repositories.py  schemas.py
backend/app/routers/: songs.py
backend/dags/: spotify_dag.py
backend/sql/: create_tables.sql
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/components/: ColorModeSwitcher.tsx  Song.tsx  TopBar.tsx  TopSongsGrid.tsx  TopSongsList.tsx
frontend/src/pages/: About.tsx  Home.tsx  Map.tsx  TopSongs.tsx  WorldMap.tsx
sql/: create_tables_wsdpl.sql
