[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["William M"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.18"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
