[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["William M"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
sqlalchemy = "^1.4"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.22.0"
pydantic = "^1.10"
requests = "^2.31.0"
spotipy = "^2.23.0"
apache-airflow = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
